# app/controllers/api/v1/reviews_controller.rb
@@ -7,33 +7,37 @@ class Api::V1::ReviewsController < ApplicationController
   def index
     @reviews = @product_item.reviews.includes(:review_votes)
   
-    if params[:filter] == 'popular'
+    case params[:filter]
+    when 'popular'
       @reviews = @reviews.left_joins(:review_votes)
-      .group('reviews.id')
-      .having('COUNT(review_votes.id) > 0')
-      .order('COUNT(review_votes.id) DESC, reviews.created_at DESC')
-    elsif params[:filter] == 'latest'
-      @reviews = @reviews.order(created_at: :desc).limit(10)
-    elsif params[:filter] == 'my_reviews'
-      @reviews = @reviews.where(user: @current_user)
-    else
+                         .group('reviews.id')
+                         .having('COUNT(review_votes.id) > 0')
+                         .order('COUNT(review_votes.id) DESC, reviews.created_at DESC')
+    when 'latest'
       @reviews = @reviews.order(created_at: :desc)
+    when 'my_reviews'
+      @reviews = @reviews.where(user: @current_user)
     end
   
-    if params[:star].present?
-      @reviews = @reviews.where(star: params[:star])
+    case params[:sort_by]
+    when 'positive'
+      @reviews = @reviews.where(star: 5)
+    when 'negative'
+      @reviews = @reviews.where(star: 1)
+    when 'recent'
+      @reviews = @reviews.order(created_at: :desc).limit(5)
     end
   
-    @reviews = @reviews.page(params[:page]).per(params[:per_page])
-  
+    @reviews = @reviews.page(params[:page]).per(params[:per_page])  
     review_summary = calculate_review_summary(@product_item.id)
-  
+
     render json: {
       reviews: ActiveModelSerializers::SerializableResource.new(@reviews, each_serializer: Review2Serializer, current_user: @current_user),
       summary: review_summary,
       meta: pagination_meta(@reviews)
     }
   end
+  
 
   def create
     @review = @product_item.reviews.new(review_params)
